Improved UX, especially on mobile devices

--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html>
 
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Srinivasa Ramanujan</title>
     <link rel="stylesheet" href="main.css">
 </head>
@@ -83,10 +85,18 @@
                 Ramanujan to mathematical geniuses such as Euler and Jacobi.
             </p>
         </div>
-        <div>
-
+        <div class="quotes">
+            <div class="quote">
+                <h2 class="">Famous Quote</h2>
+                <em>“An equation for me has no meaning, unless it expresses a thought of God.”</em>
+            </div>
+            <div class="quote">
+                <h2 class="">Famous Quote</h2>
+                <em>Reply to G.H. Hardy's comment on number 1729 as a dull number, he said “No, it is a very interesting number; it is the smallest number expressible as a sum of two cubes in two different ways, the two ways being 13 + 123 and 93 + 103.”</em>
+            </div>
         </div>
     </main>
+    <footer><h3>To know more about The Great Mathematician, you can watch his biopic <a href="https://www.imdb.com/title/tt0787524/"><em>"The Man Who Knew Infinity"</em></a></h3></footer>
 </body>
 
 </html>
