Fixed raised power bug (<sup>)

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
             </div>
             <div class="quote">
                 <h2 class="">Famous Quote</h2>
-                <em>Reply to G.H. Hardy's comment on number 1729 as a dull number, he said “No, it is a very interesting number; it is the smallest number expressible as a sum of two cubes in two different ways, the two ways being 13 + 123 and 93 + 103.”</em>
+                <em>Reply to G.H. Hardy's comment on number 1729 as a dull number, he said “No, it is a very interesting number; it is the smallest number expressible as a sum of two cubes in two different ways, the two ways being 1<sup>3</sup> + 12<sup>3</sup> and 9<sup>3</sup> + 10<sup>3</sup>.”</em>
             </div>
         </div>
     </main>
